<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.brandeis.cs.lapps</groupId>
  <artifactId>nltk-web-service</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>Web Services wrapping NLTK tools (Python)</name>
  <description>Publish API for the LAPPS exchange data structure (LEDS), the thing that will be serialized to from JSON-LD.

Provide converter for the OpenNLP one-per-line format to LEDS.</description>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.8.1</version>
  	</dependency>
	<dependency>
  		<groupId>org.anc.lapps</groupId>
  		<artifactId>lapps-api</artifactId>
  		<version>1.0.0-SNAPSHOT</version>
  	</dependency>
	<dependency>
  		<groupId>org.lappsgrid</groupId>
  		<artifactId>core</artifactId>
  		<version>1.0.0-SNAPSHOT</version>
  	</dependency>
	<dependency>
  		<groupId>org.anc.grid</groupId>
  		<artifactId>service-grid-libs</artifactId>
  		<version>1.0.0-SNAPSHOT</version>
  	</dependency>
	<dependency>
		<groupId>com.sun.faces</groupId>
		<artifactId>jsf-api</artifactId>
		<version>2.1.7</version>
	</dependency>	
	<dependency>
	        <groupId>javax.servlet</groupId>
		<artifactId>jstl</artifactId>
		<version>1.2</version>
	</dependency>
	<dependency>
	        <groupId>com.sun.faces</groupId>
		<artifactId>jsf-impl</artifactId>
		<version>2.1.7</version>
	</dependency>
   	<dependency>
           <groupId>org.anc</groupId>
           <artifactId>common</artifactId>
           <version>3.1.1</version>
	 </dependency>
	 <dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>1.7.5</version>
	</dependency>	
	<dependency>
		<groupId>org.apache.lucene</groupId>
		<artifactId>lucene-wordnet</artifactId>
		<version>3.3.0</version>
	</dependency>
  </dependencies>

	<build>
		<finalName>nltk-web-service</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<version>2.7.2</version>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
				</configuration>
			</plugin> 
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>4040</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
				</configuration>
			</plugin>
		</plugins>
	</build>	
</project>
